--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 services:
   web:
     build: .
-    command: gunicorn core.wsgi:application --bind 0.0.0.0:8000
+    command: gunicorn core.wsgi:application --bind 0.0.0.0:8001
     ports:
-      - "8000:8000"
+      - "8001:8001"
     volumes:
       - .:/app
     depends_on:
@@ -14,7 +14,7 @@ services:
       - POSTGRES_USER=catalogueuser
       - POSTGRES_PASSWORD=cataloguepass
       - REDIS_HOST=redis
-      - REDIS_PORT=6379
+      - REDIS_PORT=6380
 
   db:
     image: postgres:15
@@ -22,13 +22,15 @@ services:
       POSTGRES_DB: cataloguedb
       POSTGRES_USER: catalogueuser
       POSTGRES_PASSWORD: cataloguepass
+    ports:
+      - "5432:5432"
     volumes:
       - db_data:/var/lib/postgresql/data
 
   redis:
     image: redis:7
     ports:
-      - "6379:6379"
+      - "6380:6380"
 
 volumes:
   db_data:
