--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -42,15 +42,13 @@ jobs:
         with:
           python-version: "3.11"
           cache: pip
-          cache-dependency-path: api-catalogue/requirements.txt
+          cache-dependency-path: requirements.txt
 
       - name: Install dependencies
         run: pip install -r requirements.txt
-        working-directory: api-catalogue
 
       - name: Run tests
         run: python manage.py test catalogue
-        working-directory: api-catalogue
         env:
           POSTGRES_HOST: 127.0.0.1
           POSTGRES_DB: cataloguedb
@@ -74,8 +72,8 @@ jobs:
       - name: Build api-catalogue image
         uses: docker/build-push-action@v5
         with:
-          context: ./api-catalogue
-          file: ./api-catalogue/dockerfile
+          context: .
+          file: ./dockerfile
           push: false
           tags: ${{ env.REGISTRY }}/${{ github.repository_owner }}/api-catalogue:sha-${{ github.sha }}
 
@@ -104,8 +102,8 @@ jobs:
       - name: Publish api-catalogue image
         uses: docker/build-push-action@v5
         with:
-          context: ./api-catalogue
-          file: ./api-catalogue/dockerfile
+          context: .
+          file: ./dockerfile
           push: true
           tags: |
             ${{ env.REGISTRY }}/${{ github.repository_owner }}/api-catalogue:sha-${{ github.sha }}
